1.013 2010-12-14
   - Call store_digest_authorization_nonce() instead of $c->cache->set()
     in authenticate_digest() (RT#63669) (rjk)
   - Make Test::Exception and Test::MockObject be listed as test_requires
     rather than requires (RT#54029)
   - Skip WWW::Mech tests unless WWW::Mech is a new enough version (RT#55303).
   - Improve documentation for authenticate_digest() (rjk)
     - depends on Catalyst::Plugin::Cache, not Catalyst::Plugin::Session
     - reorganize and clarify

1.012 2010-03-07
   - Move actions out of the test applications to stop warnings.

   - Make Pod tests author only.

1.011 2009-06-26
   - Added true/false check to _debug option

1.010 2009-05-14
   - Moved tests out to t/lib/ (dhoss)

   - Add debug when a user is found, but passwords don't match (abraxxa)

1.009  2009-01-04
   - Remove use of _config accessor, which I'd stupidly cargo-culted.
     As we don't ever run in auth back-compat mode, we can store
     everything in instance data without worrying about conflicts.
     Note however - have to keep the accessor itself so that our
     parent class (which is still stupid and uses it) continues to work.

1.008  2008-12-10
  - Fix issue with the user not being authenticated into the correct
    realm, by not calling $c->set_authenticated ourselves, but instead
    just returning the user object. Fix suggested by Bernhard Graf. (t0m)
    - Add test for this (t0m)
  - Change $user to $user_obj in authenticate_digest for consistency (t0m)

1.007  2008-11-19
  - Add test for query strings in digest auth as digest header is built using
    the full URI (t0m)
  - Fix for this (Peter Corlett)
  - Fix warning when used with self_check => 1 (t0m)
  - Added respository info to META.yml (t0m)

1.006  2008-10-06
  - Added username_field configuration option. I need this to play
    nice with Catalyst::Authentication::Store::Tangram.
  - Doc cleanups / clarifications related to RT#39838

1.005  2008-09-25